# Road-Traversability

./: CMakeLists.txt  README.md  settings.config  vehicle_parameters.config
configs/: settings.config  settings.config~  vehicle_parameters.config
mat_src/: clear.mat  clear0.mat  clear1.mat  clear2.mat  clear3.mat  clear4.mat
mat_src/RTI/: PRMAnalysis.m  PRMAnalysisEdge.m  PRMAnalysisSparse.m  PRMAnalysisSparse_bak.m  PRMAnalysisWithSafety.m  RTIanalysis.m  computeBatchRTI.m  computeBatchRandomRTI2.m  computeRTI.m  computeSafeRTI.m  dubinsCurve.m  findSafeConfigs.m  fragtest.eps  line_fitting.m  minccut_configs.mat  minccut_configs4.mat  minccut_configs6.mat  parameters.m  parameters_kitti.m  percRTIanalysis.m  percentageRTI.m  plotMinCut.m  plotSafeMincut.m  plotSafetyBasedMinCut.m  plot_rti.m  prmGraphValidity.m  roadRepair.m  road_obs42_adj  road_obs42_prm  rsi_safer_path.m  safePath.m  safePathSE2.m  safePathService.m  safePathsAnalysis.m  test.m  test2.m  test3.m  test_adj  toySafePaths.m  vehicle_parameters.config
mat_src/SBM/: configDistance.m  connectingConfigs.m  dem_info.txt  findPath.m  plotConfigs.m  plotConnectingNeighbors.m  plotDEM.m  plotRRT.m  plotVehicle.m  quasiRandomConfigs.m  rrtBuild.m  simulateVehiclePath.m  stateLattice.m  test.m  test_vehicle_boxes.m  toyPRM.m
mat_src/clearance/: PRMAnalysisSparseWeighted.m  computeActualClearanceAndLine.m  configSpaceFootPrint.m  omni_robot.m  (+12 more)
py_src/: point_robot_roadmap_graph.ipynb  test.py
src/: add_obstacle_road.cpp  generate_nominal_road.cpp  road_rti.cpp  road_with_obstacles.cpp  rti_analysis.cpp
(+273 files in other folders)
